# Micromouse-2026

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  clangd  docs.ps1  docs.sh  test.bat  test.ps1
app/: CMakeLists.txt
app/adc_test/: CMakeLists.txt  board.h  main.cc
app/adc_test/bsp_f411/: CMakeLists.txt  f411_board.cc
app/adc_test/docs/: dma.md
app/blink/: main.cc
app/blink/bsp_f411/: f411_board.cc
app/cli/: CMakeLists.txt  board.h  main.cc
app/cli/bsp_f411/: CMakeLists.txt  f411_board.cc
app/drv8231_test/: CMakeLists.txt  board.h  main.cc
app/drv8231_test/bsp_f411/: CMakeLists.txt  f411_board.cc
app/drv8231_test/docs/: README.md
app/encoder_test/: CMakeLists.txt  board.h  main.cc
app/encoder_test/bsp_f411/: CMakeLists.txt  f411_board.cc
app/hc-05_test/: CMakeLists.txt  board.h  main.cc
app/hc-05_test/bsp_f411/: CMakeLists.txt  f411_board.cc
app/hc-05_test/docs/: README.md
app/imu_test/bsp_f411/: f411_board.cc
app/ir_test/: CMakeLists.txt  board.h  main.cc
app/ir_test/bsp_f411/: CMakeLists.txt  f411_board.cc
app/mms_sim/: CMakeLists.txt  README.md  main.cc  sim.ps1  sim.sh
app/mms_sim/sim/: mms.cc  mms.h
app/nav_app/: CMakeLists.txt  board.h  main.cc
app/nav_app/bsp_f411/: CMakeLists.txt  f411_board.cc
app/pcb-blinky/: CMakeLists.txt  board.h  main.cc
app/pcb-blinky/bsp_f411/: CMakeLists.txt  f411_board.cc
app/pid_controller/: .board.h  .main.cc  CMakeLists.txt  board.h  main.cc  pid_sim.py
app/pid_controller/bsp_f411/: .f411_board.cc  CMakeLists.txt  f411_board.cc
app/pid_controller/test/: CMakeLists.txt  test.cc
app/pwm_test/: main.cc
app/pwm_test/bsp_f411/: f411_board.cc
app/timebase_test/: CMakeLists.txt  board.h  main.cc
app/timebase_test/bsp_f411/: CMakeLists.txt  f411_board.cc
app/usart_test/: CMakeLists.txt  board.h  main.cc
app/usart_test/bsp_f411/: CMakeLists.txt  f411_board.cc
common/core/: CMakeLists.txt
common/core/.api/: motioncontroller.cc  motioncontroller.h
common/core/algorithm/: CMakeLists.txt  floodfill.cc  floodfill.h
common/core/api/: CMakeLists.txt  motioncontroller.cc
common/core/cli/: CMakeLists.txt  cli.h
common/core/control/: CMakeLists.txt  pid.cc  pid.h
common/core/control/docs/: README.md
common/core/control/helpers/: CMakeLists.txt  elapsed.cc  elapsed.h  trapezoidal.cc  trapezoidal.h
common/core/control/motion/: CMakeLists.txt  motion.cc  motion.h
common/core/control/pid/: CMakeLists.txt  pid.cc  pid.h
common/core/control/profile/: CMakeLists.txt  trapezoidal.cc  trapezoidal.h
common/core/control/sample/: CMakeLists.txt  enc_sample.cc  enc_sample.h
common/core/math/: enc_math.h  imu_math.h  pid_math.h
common/core/navigation/: CMakeLists.txt  nav.cc  nav.h
common/core/periph/: CMakeLists.txt
common/core/periph/bno055/: bno055_imu.cc
common/core/periph/chip_select/: gpio_cs.cc  gpio_cs.h
common/core/periph/drv8231/: CMakeLists.txt  drv8231.cc  drv8231.h
common/core/periph/irsensor/: CMakeLists.txt  ircontroller.cc  ircontroller.h  irsensor.cc  irsensor.h
common/core/periph/w25q128/: w25q.cc
common/drivers/: CMakeLists.txt
common/drivers/bus/: usart.h
common/drivers/clock/: sys_clk.h
common/drivers/io/: adc.h  encoder.h  gpio.h  pwm.h
common/drivers/memory/: dma.h
common/drivers/time/: delay.cc  delay.h  oc.h  timebase.h
docs/: Doxyfile  docs.ps1  docs.sh
(+22 files in other folders)
